Actualizo tesis.tex

--- a/Source/Tesis/tesis.tex
+++ b/Source/Tesis/tesis.tex
@@ -16,7 +16,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
 \usepackage{amsthm}
-\usepackage{lipsum}
+\usepackage{lipsum,multicol}
 %\usepackage{calligra}
 %\usepackage{calrsfs}
 \usepackage{mathrsfs}
@@ -29,11 +29,13 @@
 \usepackage{amssymb}
 \usepackage[T1]{fontenc}
 \usepackage[numbers]{natbib}
-\usepackage{multirow}
 \usepackage{color}
-\usepackage{comment}
+\usepackage{multirow}
+\usepackage{booktabs}
+\usepackage[small]{caption}
+\usepackage{bm,bbm}
+\spanishdecimal{.}
 
-\usepackage[textsize=tiny]{todonotes}
 
 \theoremstyle{definition}
 \newtheorem{definition}{Definición}[chapter] % esto es para que lo numere como : capitulo. definicion
