--- a/Bibliography/bib_julia.bib
+++ b/Bibliography/bib_julia.bib
@@ -5895,7 +5895,7 @@ doi = {10.1109/IGARSS.2017.8127630}
 	DOI = {doi: 10.1186/1475-925X-13-154.}
 }
 
-@misc{Sarmap2009,
+	@misc{Sarmap2009,
 	author = {Sarmap},
 	title = {Synthetic Aperture Radar
 	and Sarscape. The Earth Observation Information Gateway},
@@ -6012,3 +6012,24 @@ doi = {10.1109/IGARSS.2017.8127630}
 	doi={10.1109/IGARSS.2016.7729845},
 	ISSN={},
 	month={July},}
+
+@INPROCEEDINGS{Adelson1984,
+	title={Pyramid methods in image processing},
+	author={Adelson, E. and Anderson, C. and Bergen, J. and Burt, P.  and Ogden, J. },
+	year={1984}
+}
+
+@article{scheffe1947,
+	author = "Scheffe, H.",
+	doi = "10.1214/aoms/1177730390",
+	fjournal = "The Annals of Mathematical Statistics",
+	journal = "Ann. Math. Statist.",
+	month = "09",
+	number = "3",
+	pages = "434--438",
+	publisher = "The Institute of Mathematical Statistics",
+	title = "A Useful Convergence Theorem for Probability Distributions",
+	url = "https://doi.org/10.1214/aoms/1177730390",
+	volume = "18",
+	year = "1947"
+}
