Actualizo archivos tex

--- a/Source/Tesis/capitulo1.tex
+++ b/Source/Tesis/capitulo1.tex
@@ -8,5 +8,4 @@ En los últimos años se ha dedicado especial atención al modelado de datos que
 La familia de distribuciones $\mathcal{G}^0$  tienen soporte positivo y se indexan por tres parámetros: textura, escala y número de looks. % La estimación de la textura de la imagen es de suma importancia, ya que es capaz de caracterizar el tipo de objetivo bajo análisis. 
 Se han propuesto muchas técnicas para estimar el parámetro de textura, entre ellas, máxima verosimilitud, momento, métodos robustos y logcumulants.
 
-Esta tesis propone y analiza una nueva estrategia para la estimación de los parámetros de textura y brillo del modelo $\mathcal G_0$ para datos de intensidad, por medio de la minimización de distancias estocásticas entre la función de densidad teórica $\mathcal{G}_I^0$ y una estimación no paramétrica de la función de densidad subyacente que proviene de los datos observados. La propuesta es estimar dicha función de densidad utilizando núcleos asimétricos ya que la distribución tiene soporte positivo. Se comparará el desempeño de estos estimadores, en términos de sesgo y error cuadrático medio, con los obtenidos por el métodos de momentos, máxima verosimilitud y logcumulants. Además se estudiará el comportamiento de estos estimadores y sus
-propiedades, como así también la robustez de los mismos bajo contaminación.
+Esta tesis propone y analiza una nueva estrategia para la estimación del parámetro de textura del modelo $\mathcal G_0$ para datos de intensidad, por medio de la minimización de distancias estocásticas entre la función de densidad teórica $\mathcal{G}_I^0$ y una estimación no paramétrica de la función de densidad subyacente que proviene de los datos observados. La propuesta es estimar dicha función de densidad utilizando núcleos asimétricos ya que la distribución tiene soporte positivo. Se comparará el desempeño de estos estimadores, en términos de sesgo, error cuadrático medio, con los obtenidos por el métodos de momentos, máxima verosimilitud y logcumulants. Además se estudiará el comportamiento de estos estimadores y sus propiedades, como así también la robustez de los mismos bajo diferentes escenarios de contaminación.
