--- a/Source/Tesis/gracias.tex
+++ b/Source/Tesis/gracias.tex
@@ -9,4 +9,4 @@
 
 \chapter*{Agradecimientos}
 
-Este trabajo no habr'ia sido posible sin el apoyo y el est'imulo
+Este trabajo no habría sido posible sin el apoyo y el estímulo
