--- a/Source/Tesis/tesis.tex
+++ b/Source/Tesis/tesis.tex
@@ -195,12 +195,7 @@
 %% Nota que los acentos se deben escribir: \'a, \'e, \'i, etc.
 %% La letra n con tilde es: \~n.
 
-\author{Julia Analía Cassetti}
-\title{Estimación de Parámetros en Imágenes SAR Monopolarizadas Usando Distancias Estocásticas y Núcleos Asimétricos}
-\degree{Doctor en Ciencia y Tecnología}
-\supervisor{Dr. Alejandro Frery Orgambide}
-\institution{Universidad Nacional de General Sarmiento}
-%\faculty{Escuela de Ingenier\'ia y Ciencias}
+
 %\department{Departamento de Sistemas Computacionales}
 
 %% # M'argenes del documento #
@@ -216,6 +211,10 @@
 \hyperlinking
 
 \begin{document}
+	
+
+
+	%\faculty{Escuela de Ingenier\'ia y Ciencias}
 
 %% En esta secci'on se describe la estructura del documento de la tesis.
 %% Consulta los reglamentos de tu universidad para determinar el orden
@@ -224,13 +223,14 @@
 %% # Portada de la tesis #
 %% Mirar el archivo "titlepage.tex" para los detalles.
 
+
 \include{titlepage}
 
 %% # Prefacios #
 %% Por cada prefacio (p.e. agradecimientos, resumen, etc.) crear
 %% un nuevo archivo e incluirlo aqu'i.
 %% Para m'as detalles y un ejemplo mirar el archivo "gracias.tex".
-
+\include{formulario_E_Julia}
 \include{gracias}
 
 %% # 'Indices y listas de contenido #
@@ -257,11 +257,11 @@
 \include{capitulo7}
 \include{capitulo8}
 
-
 \appendix
+
 %% Cap'itulos incluidos despues del comando \appendix aparecen como ap'endices
 %% de la tesis.
-%\include{apendiceA}
+\include{apendiceA}
 %\include{apendiceB}
 %\include{apendiceC}
 
