--- a/Source/Tesis/titlepage.tex
+++ b/Source/Tesis/titlepage.tex
@@ -36,15 +36,47 @@
 %%   \insertfaculty
 %%   \insertdepartment
 %%   \insertsubmitdate
+\vspace{-3cm}
+\begin{flushright}
+	\includegraphics[width=0.33\linewidth]{../../Logos/LogoUngs.jpg}
+\end{flushright}
 
 \begin{titlepage}
-  \TitleBlock{\scshape\insertinstitution}
+\vspace{-4cm}
+\begin{center}
+	\textbf{DOCTORADO EN CIENCIA Y TECNOLOGIA}\vspace{-3mm}\\
+	\hrulefill\\
+	{\small Evaluado y acreditado por la Comisión Nacional de Evaluación y Acreditación Universitaria (CONEAU). \emph{Resolución Nº 1178/11. Calificación “B”}.}
+\end{center}
+
+\vspace{1.5cm}
+
+%\pagenumbering{gobble}
+\noindent\makebox[\linewidth]{\rule{15 cm}{1.5pt}}
+\begin{center}
+	\textbf{{\LARGE Estimación de Parámetros en Imágenes SAR Monopolarizadas Usando Distancias Estocásticas y Núcleos Asimétricos}}
+\end{center}
+\noindent\makebox[\linewidth]{\rule{15 cm}{1.5pt}}
+
+\vspace{1cm}
+
+  %\TitleBlock{\scshape\insertinstitution}
   %\TitleBlock[\bigskip]{\scshape\insertfaculty}
-  \TitleBlock{\Huge\scshape\inserttitle}
+ % \TitleBlock{\Huge\scshape\inserttitle}
   \TitleBlock{\scshape
-    Tesis presentada por \insertauthor \\
-    para obtener el grado de \insertdegree}
-  \TitleBlock{\insertsubmitdate}
+    {\large Trabajo de tesis para optar por el título de \\
+    Doctor en Ciencia y Tecnología de la \\
+    Universidad Nacional de General Sarmiento}}
+
+\vspace{2.5cm}
+
+\TitleBlock{\scshape {\large Autor:\textbf{ Julia Analía Cassetti}}}
+\vspace{1cm}
+
+\TitleBlock{\scshape {\large Director: Dr. Alejandro Frery Orgambide}}
+\vspace{1.5cm}
+
+\TitleBlock{Diciembre 2019}
   %\TitleBlock[\bigskip]{\insertdepartment}
 \end{titlepage}
 
