--- a/Source/Tesis/capitulo8.tex
+++ b/Source/Tesis/capitulo8.tex
@@ -7,31 +7,42 @@
 \chapter{Conclusiones}
 \label{Conclusiones}
 
-Propusimos un nuevo estimador para el parámetro de textura de la distribución $\mathcal{G}_I^0$ basado en la minimización de una distancia estocástica entre el modelo (que depende de dicho parámetro) y una estimación de la función de densidad subyacente utilizando núcleos asimétricos.
-Definimos tres modelos de contaminación inspirados en situaciones reales para evaluar el impacto de los valores atípicos en el desempeño de los estimadores.
-Las dificultades de estimar el parámetro de textura de la distribución $\mathcal{G}_I^0$ se investigaron más a fondo y se justificaron a través de nuevos resultados teóricos que indican que esta distribución tiene colas pesadas.
+Esta tesis propone un nuevo estimador para el parámetro de textura de la distribución $\mathcal{G}_I^0$ basado en la minimización de una distancia estocástica entre el modelo (que depende de dicho parámetro) y una estimación de la función de densidad subyacente utilizando núcleos asimétricos $\widehat{f}$. El objetivo es obtener un estimador que tenga buen desempeño para muestras de pequeño tamaño, sea competitivo con los estimadores de Máxima Verosimilitud (MV) y Logcumulants (LC) que son los utilizados en la literatura y que tenga una buena performance frente a la presencia de diferentes niveles de contaminación.
 
-Con respecto al impacto de la contaminación en el rendimiento de los estimadores, observamos lo siguiente.
-Los estimadores de Momento fraccional y Logcumulantes presentaron problemas en la convergenciar.
 
-\begin {itemize}
-	\item Caso 1: Independientemente de la intensidad de la contaminación, cuanto mayor sea el número de looks, menor será el porcentaje de situaciones para las que no se logra convergencia.
-	\item Casos 2 y 3: el porcentaje de situaciones para las que no hay convergencia aumenta con el nivel de contaminación, y se reduce con $\alpha$.
-\end {itemize}
+%Se evaluaron diferentes núcleos para $\widehat{f}$ y se eligió el núcleo Gamma y Lognormal para continuar con el análisis, basado fundamentalmente, en el alto MISE que presentaron.
 
-En el caso de un solo look, el estimador propuesto no presenta resultados excelentes, pero nunca deja de converger, cosa que puede suceder con los otros estimadores.
+En una primera instancia se consideró el núcleo inverso Gaussiano (IG) para estimar $\widehat{f}$ con un ancho de banda encontrado empíricamente, y se comparó su desempeño con los estimadores que provienen del método MV, LC y Momento Fraccionario de orden $1/2$ en términos de sesgo, error cuadrático medio (ECM), tiempo de procesamiento y bajo contaminación. En esta oportunidad se consideraron tres casos de contaminación y se observó que tanto Momentos Fraccionarios como LC presentaron problemas de convergencia. Además, Momentos Fraccionarios presentó mayor sesgo y ECM en la mayoría de los casos analizados.
 
-El nuevo estimador presenta buenas propiedades medidas por su sesgo y error cuadrático medio. Es competitivo con los MV estimadores, momento fraccionario y Logcumulant en situaciones sin contaminación, y supera a las otras técnicas incluso en presencia de pequeños niveles de contaminación.
+Definimos tres modelos de contaminación inspirados en situaciones reales para evaluar el impacto de los valores atípicos en el desempeño de los estimadores. Analizando estos escenarios se obsevó que
 
-Por esta razón, sería aconsejable usar $\widehat{\alpha}_{\text{T}} $ en cada situación, especialmente cuando se usan muestras pequeñas y/o cuando existe la posibilidad de tener datos contaminados.
-El costo computacional adicional incurrido al usar este estimador es, como máximo, veinte veces mayor que el requerido para calcular $\widehat{\alpha}_{\text{ML}}$, pero sus ventajas son más importantes que este aumento en el tiempo de procesamiento.
+\begin{itemize}
+	\item Caso 1: Independientemente de la intensidad de la contaminación, cuanto mayor es el número de looks menor es la cantidad de casos donde se presentan problemas de convergencia. 
+	\item  Casos 2 y 3: el porcentaje de situaciones para las cuales no hay convergencia aumenta con el nivel de contaminación y se reduce con el valor de $\alpha$.
+\end{itemize}
 
-\section{Apéndice}
+Entonces, en este primer trabajo se observó que, en el caso de un solo look, el estimador propuesto no presenta resultados excelentes. En el caso multilook el nuevo estimador presenta buenas propiedades según lo medido
+por su sesgo y ECM. Es competitivo con MV y LC estimadores en situaciones sin contaminación, y supera el desempeño de estas métodos incluso en presencia de pequeños niveles de contaminación. Por este motivo se decidió mejorar la propuesta. 
 
-% \ section {Información computacional}
+Además se investigaron más a fondo las dificultades de estimar el parámetro de textura de la distribución $\mathcal{G}_I^0$  y se justificaron a través de nuevos resultados teóricos que indican que esta distribución tiene colas pesadas.
 
-Las simulaciones se realizaron utilizando el lenguaje y el entorno \texttt R para computación estadística~\cite{RLanguage}.
-La función \texttt{adaptIntegrate} del paquete \texttt{cubature} se utilizó para realizar la integración numérica requerida para evaluar la distancia triangular, el algoritmo utilizado es una integración multidimensional adaptativa sobre hipercubos. Para encontrar numéricamente $\widehat\alpha_{\text{LC}}$ utilizamos la función `` uniroot '' implementada en \texttt R.
+En un segundo estudio se comparó la performance del núcleo IG con el LN y el $\Gamma$ analizando el error cuadrático medio integrado (MISE). Se observó que el núcleo IG es el que mayor MISE presentó frente a los otros núcleos. Por este motivo no se lo consideró en el nuevo análisis realizado.
 
-Una parte de las simulaciones se realizó en una plataforma compuesta por un Intel(R) Core i7 con $8$ GB de memoria y $64$ bits  Windows  7. Otra parte se hizo en un equipo similar pero con $16$ GB de memoria RAM.
-Los códigos y los datos están disponibles a solicitud del autor correspondiente.
+Se volvió a realizar un análisis similar respecto del primer trabajo considerando en esta oportunidad los estimadores que provienen del método de MV, LC y el que resulta de la minimización de la distancia triangular utilizando los núcleos $\Gamma$ y LN para estimar $\widehat{f}$. Se fijó un nuevo criterio de convergencia para todos los métodos y se comparó la cantidad de casos de no convergencia. Se estudió el costo computacional y, en esta oportunidad, se incorporó la Función de Influencia Empírica para evaluar la robustez de estos estimadores, como así también el caso 1 de contaminación. Asimismo se utilizó el método LSCV para elegir el ancho de banda que interviene en la estimación de $\widehat{f}$. 
+
+En los estudios por Montecarlo se observó que:
+
+\begin{itemize}
+	\item Por un lado, los métodos MV y LC tienen comportamiento similar entre sí y, por el otro, los estimadores de mínima distancia utilizando núcleos LN y $\Gamma$ tanto para datos sin contaminar como para datos contaminados. Incluso este comportamiento se presenta al momento de analizar la Función de Influencia Empírica.
+	\item Para datos sin contaminar y con textura, el estimador propuesto es competitivo respecto de los MV y LC estimadores en términos de sesgo y ECM. Sin embargo supera a los estimadores MV y LC en presencia de contaminación, ya sea utilizando núcleo $\Gamma$ o LN, aunque este último es el que presenta un comportamiento más estable.
+	\item El tiempo computacional de los estimadores de mínima distancia es sensiblemente mayor respecto de los MV y LC estimadores.
+	\item La cantidad de casos de no convergencia que presenta nuestra propuesta es significativamente menor respecto de los MV y LC estimadores.
+\end{itemize}
+
+En la aplicación a una imagen real se observó que el estimador de mínima distancia utilizando núcleo Lognormal es el que mejor desempeño mostró, superando a MV y LC estimadores.
+
+Además, se completó el análisis con la demostración de la consistencia fuerte del estimador de mínima distancia bajo la distancia triangular y $widehat{f}$ por núcleos asimétricos como los trabajados en esta tesis.
+
+Por lo anteriormente expuesto, el nuevo estimador presenta buenas propiedades medidas por su sesgo, error cuadrático medio y cantidad de casos de no convergencia. Es competitivo con los MV estimadores y LC estimadores en situaciones sin contaminación, y supera a estos métodos en presencia de pequeños niveles de contaminación.
+
+Por esta razón nuestra conclusión es que es aconsejable usar $\widehat{\alpha}_{\text{\tiny{T}}} $ con núcleo LN, especialmente cuando se usan muestras pequeñas y/o cuando existe la posibilidad de tener datos contaminados. Si bien el costo computacional adicional incurrido al usar este estimador es mucho mayor que el requerido para calcular $\widehat{\alpha}_{\text{\tiny{ML}}}$, sus ventajas son más importantes que este aumento en el tiempo de procesamiento.
