Subo archivo tex modificados

--- a/Source/Tesis/formulario_E_Julia.tex
+++ b/Source/Tesis/formulario_E_Julia.tex
@@ -38,9 +38,9 @@ desarrollados y completos): Universidad Nacional de General Sarmiento.
 
 	\item Descripción física del trabajo de Tesis (cantidad total de páginas, imágenes, planos, videos, archivos digitales, etc.):
 	\begin{itemize}%[leftmargin=25.00003pt,labelsep=5pt]
-		\item 163 páginas;
-		\item 15 tablas;
-		\item 59 figuras.
+		\item 154 páginas;
+		\item 14 tablas;
+		\item 58 figuras.
 	\end{itemize}
 
 	\item Alcance geográfico y/o temporal de la Tesis: El alcance geográfico de la tesis es internacional.
@@ -49,14 +49,20 @@ desarrollados y completos): Universidad Nacional de General Sarmiento.
 
 	\item Resumen en español (hasta 1000 caracteres): 
 	
+	Resumen
+	
 	El modelo $\mathcal{G}^0$ es una buena elección para explicar las características estadísticas de datos que provienen de imágenes de radar de apertura sintética (SAR), porque bajo este modelo se pueden caracterizar regiones con diferentes grado de textura a través de sus parámetros.  Esta tesis propone una nueva estrategia para la estimación del parámetro de textura del modelo $\mathcal G_0$ para datos de intensidad, por medio de la minimización de distancias estocásticas entre la función de densidad teórica, y una estimación no paramétrica de la función de densidad subyacente que proviene de los datos observados utilizando núcleos asimétricos. Se comparará el desempeño de estos estimadores, en términos de sesgo y error cuadrático medio, con los obtenidos por el Método de Momentos, Máxima Verosimilitud y Logcumulants. Además se estudiarán propiedades de convergencia, como así también la robustez de los mismos bajo contaminación. 
 
-%
-%\item Resumen en portugués (hasta 1000 caracteres):
-%
-%Neste trabalho de tese, métodos de multirresolução foram estudados com o intuito de contribuir para a segmentação de imagens de sensoriamento remoto, com especial interesse em dados de radares de abertura sintética (SAR). A ênfase foi colocada em duas aplicações: detecção de áreas inundadas e segmentação de texturas. Para a detecção de corpos d'água, os espectros de singularidade das imagens ópticas e SAR foram estimados a partir da teoria multifractal grossa e um critério de segmentação foi estabelecido com base em suas características. A segmentação das texturas foi abordada através da proposta de quatro distribuições locais de probabilidade, baseadas em coeficientes de transformada de wavelet discreta não-dizimada (UDWT) e transformada curvelet. Essas distribuições são calculadas para cada ponto de uma imagem e analisadas com a medida de informações de Shannon.
-%
+
+	\item Resumen en portugués (hasta 1000 caracteres):
+	
+	Resumo
+
+	O modelo $ \mathcal {G}^0$ é uma boa opção para explicar as características estatísticas dos dados provenientes de imagens de radar de abertura sintética (SAR), porque nesse modelo regiões com diferentes graus de textura podem ser caracterizadas através de seus parâmetros. Esta tese propõe uma nova estratégia para a estimativa do parâmetro de textura do modelo $\mathcal{G}_0$ para dados de intensidade, através da minimização de distâncias estocásticas entre a função de densidade teórica e uma estimativa não paramétrica da função de densidade. subjacente que vem dos dados observados usando núcleos assimétricos. O desempenho desses estimadores será comparado, em termos de viés e erro médio quadrático, aos obtidos pelo Método dos Momentos, Máxima Verossimilhança e Logcumulantes. Além disso, serão estudadas propriedades de convergência, bem como sua robustez sob contaminação.
+	
 	\item Resumen en inglés (hasta 1000 caracteres):
+	
+	Abstract
 	
 	The $\mathcal{G}^0$ model is a good choice to explain the statistical characteristics of data that come from synthetic aperture radar (SAR) images, because under this model, areas with different degrees of texture can be characterized through their parameters. This thesis proposes a new strategy for the estimation of the texture parameter of the $ \ mathcal G_0 $ model for intensity data, through the minimization of stochastic distances between the theoretical density function, and a non-parametric estimation of the underlying density function that comes from the observed data using asymmetric kernels. The performance of these estimators will be compared, in terms of bias and mean square error, with those obtained by the Method of Moments, Maximum Likelihood and Logcumulants. In addition, convergence properties will be studied, as well as their robustness under contamination.
 
