--- a/Source/Tesis/tesis.tex
+++ b/Source/Tesis/tesis.tex
@@ -253,7 +253,8 @@
 \include{capitulo3}
 \include{capitulo4}
 \include{capitulo5}
-\include{capitulo6}
+%\include{capitulo6}
+\include{capitulo6_v2}
 \include{capitulo7}
 \include{capitulo8}
 
