--- a/Bibliography/bib_julia.bib
+++ b/Bibliography/bib_julia.bib
@@ -6033,3 +6033,43 @@ doi = {10.1109/IGARSS.2017.8127630}
 	volume = "18",
 	year = "1947"
 }
+
+@book{Efron93,
+	title = {An Introduction to the Bootstrap},
+	author = {Efron, B. and Tibshirani, R.},
+	publisher = {Chapman \& Hall/CRC},
+	year= {1993},
+	address = {Boca Raton, Florida, USA},
+	number = {57},
+	series = {Monographs on Statistics and Applied Probability}
+}
+
+
+@book{Davison1997,
+	title={Bootstrap Methods and their Application},
+	publisher={Cambridge University Press},
+	year={1997},
+	author={Davison, A. and Hinkley, D.}
+}
+
+@article{Buckland1983,
+	author = {Buckland, S. },
+	title = {Monte Carlo Methods For Confidence Interval Estimation Using The Bootstrap Technique},
+	journal = {Journal of Applied Statistics},
+	volume = {10},
+	number = {2},
+	pages = {194-212},
+	year  = {1983},
+	publisher = {Taylor & Francis},
+	doi = {10.1080/02664768300000017},
+	
+	URL = { 
+	https://doi.org/10.1080/02664768300000017
+	
+	},
+	eprint = { 
+	https://doi.org/10.1080/02664768300000017
+	
+	}
+	
+}
