Actualizo algunos tex

--- a/Source/Tesis/titlepage.tex
+++ b/Source/Tesis/titlepage.tex
@@ -38,7 +38,7 @@
 %%   \insertsubmitdate
 \vspace{-3cm}
 \begin{flushright}
-	\includegraphics[width=0.33\linewidth]{../../Logos/LogoUngs.jpg}
+	\includegraphics[width=0.33\linewidth]{../../Logos/LogoUngs.pdf}
 \end{flushright}
 
 \begin{titlepage}
@@ -49,7 +49,7 @@
 	{\small Evaluado y acreditado por la Comisión Nacional de Evaluación y Acreditación Universitaria (CONEAU). \emph{Resolución Nº 1178/11. Calificación “B”}.}
 \end{center}
 
-\vspace{1.5cm}
+\vspace{1cm}
 
 %\pagenumbering{gobble}
 \noindent\makebox[\linewidth]{\rule{15 cm}{1.5pt}}
